# checksum

./: .coverage  .gitignore  README.md  checksum.py  cli.py  main.py  pyproject.toml
checksum/: __init__.py
cli/: __init__.py  __main__.py
test/: test_checksum.py  test_checksum_blake2.text  test_checksum_sha256.txt  test_checksum_sha512.txt  test_file.iso
